--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,17 @@
                     </execution>
                 </executions>
             </plugin>
+              <!-- Surefire -->
+       <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-surefire-plugin</artifactId>
+           <version>3.1.2</version>
+           <configuration>
+               <includes>
+                   <include>**/*Test.java</include>
+               </includes>
+           </configuration>
+       </plugin>
         </plugins>
     </build>
 
@@ -152,6 +163,42 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.6.3</version>
         </dependency>
+         <!-- JUnit 5 -->
+         <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.9.3</version>
+    </dependency>
+    <!-- Rest assured -->
+    <dependency>
+        <groupId>io.rest-assured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <version>5.3.1</version>
+    </dependency>
+    <!-- Hamcrest -->
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest</artifactId>
+        <version>2.2</version>
+    </dependency>
+    <!-- Selenium -->
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>4.14.1</version>
+    </dependency>
+    <!-- WebDriver Manager -->
+    <dependency>
+        <groupId>io.github.bonigarcia</groupId>
+        <artifactId>webdrivermanager</artifactId>
+        <version>5.5.3</version>
+    </dependency>
+    <!-- ApprovalTests -->
+    <dependency>
+        <groupId>com.approvaltests</groupId>
+        <artifactId>approvaltests</artifactId>
+        <version>18.7.1</version>
+    </dependency>
     </dependencies>
 
 
