--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,9 @@
                 <version>3.12.1</version>
                 <configuration>
                     <release>18</release>
-                </configuration>
+					<source>16</source>
+					<target>16</target>
+				</configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -76,6 +78,16 @@
                </includes>
            </configuration>
        </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/E2E/**.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
