--- a/pom.xml
+++ b/pom.xml
@@ -67,20 +67,10 @@
                    <include>**/*Test.java</include>
                </includes>
                <excludes>
-                   <exclude>**/e2e/**/**.java</exclude>
+                   <exclude>**/E2E/**/**.java</exclude>
                </excludes>
            </configuration>
        </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/E2E/**.java</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -159,27 +149,10 @@
             <version>2.25.0</version>
         </dependency>
         <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>4.17.0</version>
-        </dependency>
-        <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>5.8.0</version>
         </dependency>
-         <!-- JUnit 5 -->
-         <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>5.9.3</version>
-    </dependency>
-    <!-- Rest assured -->
-    <dependency>
-        <groupId>io.rest-assured</groupId>
-        <artifactId>rest-assured</artifactId>
-        <version>5.3.1</version>
-    </dependency>
     <!-- Hamcrest -->
     <dependency>
         <groupId>org.hamcrest</groupId>
@@ -191,18 +164,6 @@
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
         <version>4.19.1</version>
-    </dependency>
-    <!-- WebDriver Manager -->
-    <dependency>
-        <groupId>io.github.bonigarcia</groupId>
-        <artifactId>webdrivermanager</artifactId>
-        <version>5.6.3</version>
-    </dependency>
-    <!-- ApprovalTests -->
-    <dependency>
-        <groupId>com.approvaltests</groupId>
-        <artifactId>approvaltests</artifactId>
-        <version>18.7.1</version>
     </dependency>
     </dependencies>
 
