committing change made while troubleshooting the db problem

--- a/src/main/resources/appplication.properties
+++ b/src/main/resources/appplication.properties
@@ -1,2 +1,7 @@
 logging.file.name=timesheet.log
 management.endpoints.web.exposure.include=health,logfile,info,metrics,env,beans,httptrace
+spring.datasource.url=jdbc:h2:mem:timesheet
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
